--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma": "^0.12.16",
     "karma-coverage": "^0.2.4",
     "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "karma-phantomjs-launcher": "^0.1.4",
+    "grunt-contrib-copy": "~0.7.0"
   }
 }
