--- a/.jshintrc
+++ b/.jshintrc
@@ -73,6 +73,10 @@
   // Custom Globals
   "globals": {          // additional predefined global variables
     // AMD predef
-    "define": false
+    "define": false,
+
+    // Home app
+    "Primitives": false,
+    "Dichotomic": false
   }
 }
