--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
   },
   "homepage": "https://github.com/ViBiOh/JavascriptUtils",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jscs": "^0.8.0",
-    "grunt-contrib-uglify": "^0.4.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.8.3",
-    "karma": "^0.12.16",
-    "karma-coverage": "^0.2.4",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "grunt": "*",
+    "grunt-contrib-clean": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-jshint": "*",
+    "grunt-jscs": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-karma": "*",
+    "karma": "*",
+    "karma-coverage": "*",
+    "karma-jasmine": "*",
+    "karma-phantomjs-launcher": "*"
   }
 }
