--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "jsUtils",
   "version": "0.0.1",
   "description": "Javascript Utils Functions",
-  "main": "gruntFile.js",
+  "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/jshint src/",
     "checkStyle": "./node_modules/.bin/jscs src/",
     "pretest": "npm run-script lint && npm run-script checkStyle",
     "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive -R spec test/**/*.js",
-    "uglify": "./node_modules/.bin/uglifyjs src/dichotomic.js src/primitives.js -o ${npm_package_name}.js -c --preamble //${npm_package_name}@${npm_package_version}",
+    "uglify": "./node_modules/.bin/uglifyjs src/dichotomic.js src/primitives.js -o index.js -c --preamble //${npm_package_name}@${npm_package_version}",
     "posttest": "npm run-script uglify"
   },
   "repository": {
