--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "checkStyle": "./node_modules/.bin/jscs src/",
     "pretest": "npm run-script lint && npm run-script checkStyle",
     "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive -R spec test/**/*.js",
-    "uglify": "./node_modules/.bin/uglifyjs src/dichotomic.js src/primitives.js -o index.js -c --preamble //${npm_package_name}@${npm_package_version}",
+    "uglify": "./node_modules/.bin/uglifyjs src/primitives.js -o index.js -c --preamble //${npm_package_name}@${npm_package_version}",
     "posttest": "npm run-script uglify"
   },
   "repository": {
@@ -16,9 +16,6 @@
     "url": "git://github.com/ViBiOh/JavascriptUtils.git"
   },
   "keywords": [
-    "dichotomic",
-    "search",
-    "sort",
     "utils",
     "commons"
   ],
@@ -28,7 +25,7 @@
     "url": "https://github.com/ViBiOh/JavascriptUtils/issues"
   },
   "homepage": "https://github.com/ViBiOh/JavascriptUtils",
-  "main": "${npm_package_name}.js",
+  "main": "index.js",
   "devDependencies": {
     "chai": "*",
     "chai-as-promised": "*",
