--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Javascript Utils Functions",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/jshint src/",
+    "jshint": "./node_modules/.bin/jshint src/",
     "eslint": "./node_modules/.bin/eslint src/",
-    "checkStyle": "./node_modules/.bin/jscs src/",
-    "pretest": "npm run lint && npm run eslint && npm run checkStyle",
+    "jscs": "./node_modules/.bin/jscs src/",
+    "pretest": "npm run jshint && npm run eslint && npm run jscs",
     "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive -R spec test/**/*.js",
-    "uglify": "./node_modules/.bin/uglifyjs src/primitives.js -o index.js -c --preamble //${npm_package_name}@${npm_package_version}",
-    "posttest": "npm run uglify"
+    "build:uglify": "./node_modules/.bin/uglifyjs src/primitives.js -o index.js -c --preamble //${npm_package_name}@${npm_package_version}",
+    "build": "npm run test && npm run build:uglify"
   },
   "repository": {
     "type": "git",
