--- a/.eslintrc
+++ b/.eslintrc
@@ -167,7 +167,7 @@
         "operator-linebreak": 2,
         "padded-blocks": 0,
         "quote-props": 0,
-        "quotes": [1, "simple", "avoid-escape"],
+        "quotes": [2, "single", "avoid-escape"],
         "radix": 2,
         "semi": 2,
         "semi-spacing": [2, {"before": false, "after": true}],
