--- a/.eslintrc
+++ b/.eslintrc
@@ -41,7 +41,7 @@
         "no-catch-shadow": 0,
         "no-class-assign": 2,
         "no-cond-assign": 2,
-        "no-console": 2,
+        "no-console": 1,
         "no-const-assign": 2,
         "no-constant-condition": 2,
         "no-continue": 2,
@@ -159,7 +159,7 @@
         "eqeqeq": 2,
         "func-names": 0,
         "func-style": [2, "declaration"],
-        "generator-star-spacing": 2,
+        "generator-star-spacing": [2, {"before": false, "after": false}],
         "guard-for-in": 2,
         "handle-callback-err": 2,
         "id-length": 2,
@@ -176,7 +176,7 @@
         "new-parens": 2,
         "newline-after-var": 0,
         "object-curly-spacing": [2, "never"],
-        "object-shorthand": 2,
+        "object-shorthand":2,
         "one-var": 2,
         "operator-assignment": [2, "always"],
         "operator-linebreak": 2,
@@ -184,7 +184,7 @@
         "prefer-const": 2,
         "prefer-spread": 2,
         "prefer-reflect": 2,
-        "quote-props": 2,
+        "quote-props": [2, "consistent-as-needed"],
         "quotes": [2, "single"],
         "radix": 2,
         "id-match": 2,
@@ -205,7 +205,7 @@
         "valid-jsdoc": 2,
         "valid-typeof": 2,
         "vars-on-top": 2,
-        "wrap-iife": 2,
+        "wrap-iife": [2, "inside"],
         "wrap-regex": 2,
         "yoda": [2, "never"]
     }
