--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint": "./node_modules/.bin/eslint src/",
     "jscs": "./node_modules/.bin/jscs src/",
     "pretest": "npm run jshint && npm run eslint && npm run jscs",
-    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --compilers js:babel/register -R spec",
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --require babel-core/register -R spec",
     "build:uglify": "./node_modules/.bin/babel ./src/jsUtils.js | ./node_modules/.bin/uglifyjs -o index.js -c -mt --preamble //${npm_package_name}@${npm_package_version}",
     "build": "npm run test && npm run build:uglify"
   },
@@ -27,7 +27,9 @@
   },
   "homepage": "https://github.com/ViBiOh/js-utils",
   "devDependencies": {
-    "babel": "5.8.29",
+    "babel-cli": "latest",
+    "babel-core": "latest",
+    "babel-preset-es2015": "latest",
     "chai": "latest",
     "chai-as-promised": "latest",
     "eslint": "latest",
