--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,5 @@ Desktop.ini
 node_modules
 **/npm-debug.log
 
-# Bower dependencies Manage
-bower_components
-
-# Grunt Builder
+# Project
 coverage
