--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "pretest": "npm run jshint && npm run eslint && npm run jscs",
     "test": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover --report text --report html ./node_modules/.bin/_mocha --reporter dot -R spec",
     "build:babel": "./node_modules/.bin/babel ./src/jsUtils.js -o ./tmp/index.babel.js",
-    "build:browserify": "./node_modules/.bin/browserify ./tmp/index.babel.js -o ./tmp/index.browser.js",
-    "build:uglify": "./node_modules/.bin/uglifyjs ./tmp/index.browser.js -o index.js -c -mt --preamble //${npm_package_name}@${npm_package_version}",
-    "build:all": "npm run build:babel && npm run build:browserify && npm run build:uglify",
+    "build:uglify": "./node_modules/.bin/uglifyjs ./tmp/index.babel.js -o index.js -c -mt --preamble //${npm_package_name}@${npm_package_version}",
+    "build:all": "npm run build:babel && npm run build:uglify",
     "build": "npm run test && npm run build:all"
   },
   "repository": {
@@ -39,7 +38,6 @@
     "jscs": "latest",
     "jshint": "latest",
     "mocha": "latest",
-    "uglify-js": "latest",
-    "browserify": "latest"
+    "uglify-js": "latest"
   }
 }
