--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
-  - "4.2.2"
+  - "5.7.0"
 script:
   - "npm run build"
+  - "npm run coveralls"
 notifications:
-  email: true
+  email: false
