--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf ./tmp && mkdir ./tmp",
-    "jshint": "./node_modules/.bin/jshint src/",
     "eslint": "./node_modules/.bin/eslint src/",
     "jscs": "./node_modules/.bin/jscs src/",
-    "pretest": "npm run jshint && npm run eslint && npm run jscs",
+    "pretest": "npm run eslint && npm run jscs",
     "test": "./node_modules/.bin/babel-node ./node_modules/isparta/bin/isparta cover --report text --report html --report lcovonly ./node_modules/mocha/bin/_mocha --",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "build:babel": "./node_modules/.bin/babel ./src/jsUtils.js -o ./tmp/index.babel.js",
@@ -37,9 +36,9 @@
     "chai": "latest",
     "chai-as-promised": "latest",
     "eslint": "latest",
-    "isparta": "latest",
+    "eslint-config-airbnb": "latest",
     "jscs": "latest",
-    "jshint": "latest",
+    "isparta": "latest",
     "mocha": "latest",
     "uglify-js": "latest",
     "coveralls": "latest",
