--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,7 @@
 {
-    "extends": "airbnb/base"
+    "extends": "airbnb/base",
+    "rules": {
+        "prefer-rest-params": 1,
+        "max-len": 1
+    }
 }
