Trying to upload from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ node_js:
 script:
   - "npm run build"
   - "npm run coveralls"
+deploy:
+  provider: releases
+  file: "index.js"
+  skip_cleanup: true
 notifications:
   email: false
