--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "clean": "rm -rf ./tmp && mkdir ./tmp",
     "eslint": "./node_modules/.bin/eslint src/",
-    "jscs": "./node_modules/.bin/jscs src/",
-    "pretest": "npm run eslint && npm run jscs",
+    "pretest": "npm run eslint",
     "test": "./node_modules/.bin/babel-node ./node_modules/isparta/bin/isparta cover --report text --report html --report lcovonly ./node_modules/mocha/bin/_mocha --",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "build:babel": "./node_modules/.bin/babel ./src/jsUtils.js -o ./tmp/index.babel.js",
     "build:uglify": "./node_modules/.bin/uglifyjs ./tmp/index.babel.js -o index.js -c -mt --preamble //${npm_package_name}@${npm_package_version}",
     "build:all": "npm run build:babel && npm run build:uglify",
-    "build": "npm run clean && npm run test && npm run build:all"
+    "build": "npm run test && npm run clean && npm run build:all"
   },
   "repository": {
     "type": "git",
@@ -37,7 +36,6 @@
     "chai-as-promised": "latest",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
-    "jscs": "latest",
     "isparta": "latest",
     "mocha": "latest",
     "uglify-js": "latest",
