--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ notifications:
   email: false
 deploy:
   provider: releases
+  skip_cleanup: true
   api_key:
     secure: pCfuSOre/His5cf/bw3bm++CtsfWumvWgQgpSUu0MmJmlcuz48SvMOgpcV3baJ2OYomVI1cerRV4XejNLtLMIVeHVAQH8X0Xx/KBbs5jUuwl7HO3+9LVnWCXxwq2pLrp9awNLjEgvbtn2PQCcxbR6gqFWm7/ik8x3ZnOdgyOB+U=
   file: index.js
