--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
     "extends": "airbnb/base",
     "rules": {
-        "max-len": 1
+        "max-len": 1,
         "no-restricted-syntax": ["ForInStatement"]
     }
 }
