--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,6 @@
     "extends": "airbnb/base",
     "rules": {
         "max-len": 1,
-        "no-restricted-syntax": ["ForInStatement"]
+        "no-restricted-syntax": 1
     }
 }
