--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
     "extends": "airbnb/base",
     "rules": {
         "max-len": 1,
-        "no-restricted-syntax": 1
+        "no-restricted-syntax": 1,
         "no-mixed-operators": 1
     }
 }
