--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
 node_js:
-- 5.9.1
-script:
-- npm run build
+- 6.7.0
+cache:
+  directories:
+  - .node_modules/
+script: |
+  npm run build
 notifications:
   email: false
