--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ cache:
   directories:
   - .node_modules/
 script: |
-  npm run build
+  npm run build &&
+  npm run coverage
 notifications:
   email: false
