--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint": "./node_modules/.bin/eslint src/",
     "pretest": "npm run eslint",
     "test": "./node_modules/.bin/babel-node ./node_modules/isparta/bin/isparta cover --report text --report html --report lcovonly ./node_modules/mocha/bin/_mocha --",
+    "coverage": "./node_modules/.bin/codecov -f ./coverage/lcov.info",
     "build:uglify": "./node_modules/.bin/babel ./src/jsUtils.js | ./node_modules/.bin/uglifyjs -o index.js -c -mt --preamble //${npm_package_name}@${npm_package_version}",
     "build": "npm test && npm run build:uglify"
   },
@@ -30,6 +31,7 @@
     "babel-eslint": "latest",
     "chai": "latest",
     "chai-as-promised": "latest",
+    "codecov": "latest",
     "eslint": "latest",
     "eslint-plugin-import": "latest",
     "eslint-config-airbnb": "latest",
