--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "eslint": "./node_modules/.bin/eslint src/",
     "pretest": "npm run eslint",
-    "test": "./node_modules/.bin/nyc --reporter html --reporter text --reporter lcov --require babel-core/register ./node_modules/.bin/mocha \"test/**/*.js\" --",
+    "test": "./node_modules/.bin/nyc --reporter html --reporter text --reporter lcov --require babel-core/register ./node_modules/.bin/ava",
     "coverage": "./node_modules/.bin/codecov -f ./coverage/lcov.info",
     "build:uglify": "./node_modules/.bin/babel ./src/jsUtils.js | ./node_modules/.bin/uglifyjs -o index.js -c -mt --preamble //${npm_package_name}@${npm_package_version}",
     "build": "npm test && npm run build:uglify"
@@ -26,18 +26,24 @@
   },
   "homepage": "https://github.com/ViBiOh/js-utils",
   "devDependencies": {
+    "ava": "latest",
     "babel-core": "latest",
     "babel-cli": "latest",
     "babel-preset-es2015": "latest",
     "babel-eslint": "latest",
-    "chai": "latest",
-    "chai-as-promised": "latest",
     "codecov": "latest",
     "eslint": "latest",
     "eslint-plugin-import": "latest",
     "eslint-config-airbnb": "latest",
-    "mocha": "latest",
     "nyc": "latest",
     "uglify-js": "latest"
+  },
+  "ava": {
+    "files": [
+      "src/**/*.test.js"
+    ],
+    "require": [
+      "babel-register"
+    ]
   }
 }
