--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "utils"
   ],
   "author": "Vincent Boutour <vincent.boutour@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ViBiOh/js-utils/issues"
   },
