--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ava": "latest",
     "babel-core": "latest",
     "babel-cli": "latest",
-    "babel-preset-es2015": "latest",
+    "babel-preset-env": "latest",
     "babel-eslint": "latest",
     "codecov": "latest",
     "eslint": "latest",
