--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Javascript Utils Functions",
   "main": "index.js",
   "scripts": {
-    "prettier": "./node_modules/.bin/prettier --print-width 100 --single-quote --trailing-comma all --color --write \"./src/**/*.js\"",
-    "eslint": "./node_modules/.bin/eslint --fix \"./src/**/*.js\"",
+    "prettier": "prettier --print-width 100 --single-quote --trailing-comma all --color --write \"./src/**/*.js\"",
+    "eslint": "eslint --fix \"./src/**/*.js\"",
     "codestyle": "npm run prettier && npm run eslint",
     "pretest": "npm run codestyle",
-    "test": "./node_modules/.bin/nyc --reporter text --reporter lcov --require babel-core/register ./node_modules/.bin/ava",
-    "coverage": "./node_modules/.bin/codecov -f ./coverage/lcov.info",
-    "build:uglify": "./node_modules/.bin/babel ./src/jsUtils.js | ./node_modules/.bin/uglifyjs -o index.js -c -m",
+    "test": "nyc --reporter text --reporter lcov --require babel-core/register ava",
+    "coverage": "codecov -f ./coverage/lcov.info",
+    "build:uglify": "babel ./src/jsUtils.js | uglifyjs -o index.js -c -m",
     "build": "npm test && npm run build:uglify"
   },
   "repository": {
