--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
   },
   "homepage": "https://github.com/ViBiOh/js-utils",
   "devDependencies": {
-    "@babel/cli": "7.1.5",
-    "@babel/core": "7.1.6",
-    "@babel/preset-env": "7.1.6",
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.2.2",
+    "@babel/preset-env": "7.2.3",
     "@babel/register": "7.0.0",
-    "ava": "1.0.0-rc.1",
+    "ava": "1.1.0",
     "babel-eslint": "10.0.1",
-    "eslint": "5.9.0",
+    "eslint": "5.12.1",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "3.3.0",
+    "eslint-config-prettier": "3.6.0",
     "eslint-plugin-import": "2.14.0",
     "nyc": "13.1.0",
-    "prettier": "1.15.2",
+    "prettier": "1.16.0",
     "uglify-js": "3.4.9"
   },
   "ava": {
