--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
-node_js: 10
-script: |
-  npm run build &&
-  bash <(curl -s https://codecov.io/bash)
+node_js: 11
+script:
+- npm run build
+- bash <(curl -s https://codecov.io/bash)
 notifications:
   email: false
