--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js: 11
 script:
 - npm run build
-- bash <(curl -s https://codecov.io/bash)
+- bash <(curl -q -sS https://codecov.io/bash)
 notifications:
   email: false
