--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Javascript Utils Functions",
   "main": "index.js",
   "scripts": {
-    "prettier": "prettier --write \"./src/**/*.js\"",
-    "eslint": "eslint --fix \"./src/**/*.js\"",
-    "codestyle": "npm run prettier && npm run eslint",
+    "format": "prettier --write \"./src/**/*.js\"",
+    "lint": "eslint --fix \"./src/**/*.js\"",
+    "codestyle": "npm run format && npm run lint",
     "pretest": "npm run codestyle",
     "test": "nyc --reporter text --reporter lcov --require @babel/register ava --verbose",
     "prebuild": "npm test",
@@ -33,7 +33,7 @@
     "@babel/register": "7.6.2",
     "ava": "2.4.0",
     "babel-eslint": "10.0.3",
-    "eslint": "6.4.0",
+    "eslint": "6.5.1",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "6.3.0",
     "eslint-plugin-import": "2.18.2",
