--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js: 13
 script:
 - npm run build
-- bash <(curl -sSqL --max-time 10 https://codecov.io/bash)
+- bash <(curl -q -sSL --max-time 10 https://codecov.io/bash)
 notifications:
   email: false
