--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@
 language: node_js
 node_js: 13
 script:
-  - npm run codestyle
-  - npm run test
+  - npm run format
+  - npm run style
+  - npm test
   - npm run build
   - bash <(curl -q -sSL --max-time 10 https://codecov.io/bash)
 notifications:
