--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ defaults:
 
 jobs:
   build:
-    name: React
+    name: Javascript
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
