--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "devDependencies": {
     "@babel/cli": "7.16.0",
     "@babel/core": "7.16.0",
+    "@babel/eslint-parser": "7.16.0",
     "@babel/preset-env": "7.16.0",
     "@babel/register": "7.16.0",
     "ava": "3.15.0",
-    "babel-eslint": "10.1.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
