--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,9 +5,8 @@ updates:
   - package-ecosystem: npm
     directory: /
     schedule:
-      interval: weekly
-      time: "06:00"
-      day: friday
+      interval: daily
+      time: '06:00'
     commit-message:
       prefix: chore
       include: scope
