--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -1,12 +1,18 @@
 ---
 version: 2
-
 updates:
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
+    commit-message:
+      prefix: ci
+      include: scope
   - package-ecosystem: npm
     directory: /
     schedule:
       interval: daily
-      time: '06:00'
+      time: "06:00"
     commit-message:
       prefix: chore
       include: scope
