--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -12,7 +12,7 @@ updates:
     directory: /
     schedule:
       interval: daily
-      time: "06:00"
+      time: '06:00'
     commit-message:
       prefix: chore
       include: scope
